--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=proyecto_efsrtv
-spring.datasource.url=jdbc:mysql://localhost:3306/db_prestamo
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/db_prestamo
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+db.prestamos.url=${DB_PRESTAMOS_URL}
+db.prestamos.user=${DB_PRESTAMOS_USER}
+db.prestamos.pass=${DB_PRESTAMO_PASS}
+db.prestamos.driver=${DB_PRESTAMOS_DRIVER}
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
